# naq

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  SECURITY.md  analysis.md  debug_worker.py  debug_worker_test.py  documentation_instructions.md  implementation_summary.md  logging_architecture.md  mermeid.md  nats_job_event_logging_implementation.md  nats_job_event_logging_implementation_glm.md  nats_job_event_logging_implementation_glm2.md  pyproject.toml  refactoring.md  test_config_loader.py  test_direct_import.py  test_event_logging_backward_compatibility.py  test_events.py  test_events_simple.py  test_refactor.py  test_worker_backward_compatibility.py  worker_refactoring_verification_report.md
.tasks/: 01_split_models.md  02_split_cli_commands.md  03_split_queue_package.md  04_split_worker_package.md  05_create_service_layer.md  06_connection_management.md  07_yaml_configuration.md  08_extract_common_patterns.md  09_integrate_services.md  0_status.md  10_event_system_integration.md  11_update_imports.md  12_testing_updates.md  1_define_data_models.md  2_event_storage.md  3_event_logger.md  4_integrate_logger.md  5_event_processor.md  6_configuration.md  status.md
.tasks2/: 01_01_create_models_package.md  01_07_update_dependent_imports.md  06_09_implement_with_nats_connection_decorator.md  06_10_implement_with_jetstream_context_decorator.md  06_14_migrate_high_frequency_worker_patterns.md  07_07_integrate_configuration_with_settings_py.md  08_02_implement_retry_decorator.md  08_12_implement_async_to_sync_async_helper.md  08_16_implement_structured_logger_class.md  09_02_integrate_worker_package_services.md  11_04_handle_complex_import_dependencies.md  11_12_implement_cli_command_tests.md  12_01_update_conftest_py_for_servicemanager_architecture.md
01/: 01_03_move_event_models.md
03/: 03_01_create_queue_package_structure.md  03_04_extract_async_api_functions.md
04/: 04_01_create_worker_package_structure.md  04_04_extract_failed_job_handler.md
06/: 06_01_implement_nats_connection_context_manager.md  06_03_implement_nats_jetstream_context_manager.md  06_05_implement_connection_metrics_data_class.md
07/: 07_04_implement_configuration_api.md  07_09_implement_cli_configuration_management_commands.md  07_15_define_integrate_configuration_error.md
09/: 09_03_integrate_scheduler_services.md  09_10_implement_error_handling_integration.md
11/: 11_07_implement_import_compatibility_tests.md  11_08_implement_backward_compatibility_tests_for_user_workflows.md  11_09_implement_performance_regression_tests_for_service_layer_overhead.md  11_19_refine_test_organization_ci_cd_integration.md
12/: 12_02_create_service_layer_test_foundation.md  12_03_develop_individual_service_unit_tests.md  12_11_implement_backward_compatibility_tests_for_user_workflows.md
dev/: basic.ipynb
docker/: docker-compose.yml
docs/: _quarto.yml  actionable_improvements.md  advanced.qmd  api.md  architecture.md  architecture.qmd  code_review.md  comprehensive_architecture_plan.md  configuration.qmd  contributing.qmd  event-logging.qmd  examples.qmd  import-migration.qmd  improvements_and_optimizations.md  index.qmd  installation.qmd  naq.md  quickstart.qmd  security.md  testing.qmd
docs_bak/: api.md  (+1 more)
(+438 files in other folders)
